--- a/package.json
+++ b/package.json
@@ -2,9 +2,17 @@
   "name": "fetch-fun",
   "version": "0.0.0",
   "description": "fetch functions",
-  "main": "lib/index.js",
+  "main": "dist/fetch-fun.cjs.js",
+  "module": "dist/fetch-fun.esm.js",
+  "browser": "dist/fetch-fun.umd.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "commit": "lint-staged && git-cz",
+    "build": "rollup -c",
+    "prepublish": "npm run build",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "lint": "eslint --fix src test",
+    "test": "cross-env NODE_ENV=test nyc mocha --recursive --exclude mock --exclude fixtures -r @babel/register -r should -r should-sinon",
+    "start": "npm test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -20,5 +28,51 @@
   "bugs": {
     "url": "https://github.com/wmzy/fetch-fun/issues"
   },
-  "homepage": "https://github.com/wmzy/fetch-fun#readme"
+  "homepage": "https://github.com/wmzy/fetch-fun#readme",
+  "lint-staged": {
+    "*.js": [
+      "cross-env NODE_ENV=production eslint --fix",
+      "git add"
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-pipeline-operator": "^7.3.2",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/register": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "commitizen": "^3.0.5",
+    "coveralls": "^3.0.2",
+    "cross-env": "^5.2.0",
+    "cz-conventional-changelog": "^2.1.0",
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-mocha": "^5.2.1",
+    "fetch-mock": "^7.3.0",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.3",
+    "mocha": "^5.2.0",
+    "node-fetch": "^2.3.0",
+    "nyc": "^13.2.0",
+    "prettier": "^1.16.4",
+    "rollup": "^1.1.2",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "should": "^13.2.3",
+    "should-sinon": "0.0.6",
+    "sinon": "^7.2.3"
+  },
+  "dependencies": {
+    "lodash": "^4.17.11",
+    "rm": "^0.1.8"
+  }
 }
