--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "dist/fetch-fun.cjs.js",
   "module": "dist/fetch-fun.esm.js",
   "browser": "dist/fetch-fun.umd.js",
+  "unpkg": "dist/fetch-fun.umd.min.js",
+  "sideEffects": false,
   "scripts": {
-    "commit": "lint-staged && git-cz",
+    "commit": "lint-staged && git-cz -n",
     "build": "rollup -c",
-    "prepublish": "npm run build",
+    "prepublish": "rimraf dist && npm run build",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint --fix src test",
     "test": "cross-env NODE_ENV=test nyc mocha --recursive --exclude mock --exclude fixtures -r @babel/register -r should -r should-sinon",
@@ -40,6 +42,11 @@
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-pipeline-operator": "^7.3.2",
@@ -54,8 +61,10 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-builtin-compat": "0.0.2",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-mocha": "^5.2.1",
+    "eslint-plugin-prettier": "^3.1.1",
     "fetch-mock": "^7.3.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.3",
@@ -63,16 +72,18 @@
     "node-fetch": "^2.3.0",
     "nyc": "^13.2.0",
     "prettier": "^1.16.4",
+    "rimraf": "^3.0.0",
     "rollup": "^1.1.2",
     "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-by-output": "^1.0.0",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-terser": "^5.1.2",
     "should": "^13.2.3",
     "should-sinon": "0.0.6",
     "sinon": "^7.2.3"
   },
   "dependencies": {
-    "lodash": "^4.17.11",
-    "rm": "^0.1.8"
+    "lodash": "^4.17.11"
   }
 }
