--- a/package.json
+++ b/package.json
@@ -2,19 +2,28 @@
   "name": "fetch-fun",
   "version": "0.1.0",
   "description": "fetch functions",
-  "main": "dist/fetch-fun.cjs.js",
-  "module": "dist/fetch-fun.esm.js",
-  "browser": "dist/fetch-fun.umd.js",
-  "unpkg": "dist/fetch-fun.umd.min.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.es.js",
+  "types": "src/index.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.cjs.js",
+      "types": "./src/index.ts"
+    }
+  },
   "sideEffects": false,
   "scripts": {
     "commit": "lint-staged && git-cz -n",
-    "build": "rollup -c",
-    "prepublish": "rimraf dist && npm run build",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "build": "vite build",
+    "build:types": "tsc --emitDeclarationOnly",
+    "dev": "vite",
+    "preview": "vite preview",
+    "prepublish": "rimraf dist && npm run build && npm run build:types",
+    "coverage": "vitest run --coverage",
     "lint": "eslint --fix src test",
-    "test": "cross-env NODE_ENV=test nyc mocha --recursive --exclude mock --exclude fixtures -r @babel/register -r should -r should-sinon",
-    "start": "npm test -- --watch"
+    "test": "vitest",
+    "start": "vitest watch"
   },
   "repository": {
     "type": "git",
@@ -22,8 +31,7 @@
   },
   "keywords": [
     "fetch",
-    "function",
-    "fp"
+    "http"
   ],
   "author": "wmzy",
   "license": "MIT",
@@ -31,6 +39,10 @@
     "url": "https://github.com/wmzy/fetch-fun/issues"
   },
   "homepage": "https://github.com/wmzy/fetch-fun#readme",
+  "files": [
+    "dist",
+    "src"
+  ],
   "lint-staged": {
     "*.js": [
       "cross-env NODE_ENV=production eslint --fix",
@@ -48,42 +60,16 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-pipeline-operator": "^7.3.2",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/register": "^7.0.0",
-    "babel-eslint": "^10.0.1",
-    "commitizen": "^3.0.5",
-    "coveralls": "^3.0.2",
-    "cross-env": "^5.2.0",
-    "cz-conventional-changelog": "^2.1.0",
-    "eslint": "^5.12.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-builtin-compat": "0.0.2",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-mocha": "^5.2.1",
-    "eslint-plugin-prettier": "^3.1.1",
-    "fetch-mock": "^7.3.0",
-    "husky": "^1.3.1",
-    "lint-staged": "^8.1.3",
-    "mocha": "^5.2.0",
-    "node-fetch": "^2.3.0",
-    "nyc": "^13.2.0",
-    "prettier": "^1.16.4",
-    "rimraf": "^3.0.0",
-    "rollup": "^1.1.2",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-by-output": "^1.0.0",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-terser": "^5.1.2",
-    "should": "^13.2.3",
-    "should-sinon": "0.0.6",
-    "sinon": "^7.2.3"
-  },
-  "dependencies": {
-    "lodash": "^4.17.11"
+    "@vitest/coverage-v8": "^3.0.5",
+    "commitizen": "^4.3.1",
+    "cross-env": "^7.0.3",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^9.20.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
+    "tools-config": "^0.2.0",
+    "typescript": "^5.7.3",
+    "vite": "^6.1.0",
+    "vitest": "^3.0.5"
   }
 }
