--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "types": "src/index.ts",
   "exports": {
     ".": {
+      "types": "./src/index.ts",
       "import": "./dist/index.es.js",
-      "require": "./dist/index.cjs.js",
-      "types": "./src/index.ts"
+      "require": "./dist/index.cjs.js"
     }
   },
   "sideEffects": false,
