--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+		- uses: pnpm/action-setup@v4
+  		with:
+				version: 9
+
     - name: Set up Node.js
       uses: actions/setup-node@v4
       with:
