--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "fetch functions",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
-  "types": "dist/types/index.ts",
+  "types": "dist/types/index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/types/index.ts",
+      "types": "./dist/types/index.d.ts",
       "import": "./dist/index.es.js",
       "require": "./dist/index.cjs.js"
     }
